@@ -1,5 +1,6 @@
 package com.agh.hydra.api.register.service;
 
+import com.agh.hydra.api.register.request.CompaniesRequest;
 import com.agh.hydra.api.register.request.UpdateCompaniesRequest;
 
 import javax.validation.Valid;
@@ -12,4 +13,10 @@ public interface ICompanyService {
      * @param request update company request
      */
     void updateCompanies(@Valid @NotNull UpdateCompaniesRequest request);
+
+    /**
+     * Changes active flag to false
+     * @param request companies request
+     */
+    void invalidateCompanies(@Valid @NotNull CompaniesRequest request);
 }
